# click-language-features

./: .eslintignore  .gitignore  LICENSE  README.md  package-lock.json  package.json
client/: package-lock.json  package.json
client/src/: extension.ts
client/src/test/: helper.ts
languages/click/: language-configuration.json
server/: package-lock.json  package.json
server/src/: index.ts  server.ts
server/src/completion/: click.ts  index.ts  testie.ts
server/src/handlers/: semanticTokens.ts  textDocument.ts
server/src/parser/: click.ts  index.ts  testie.ts
server/src/parsers/: click.ts  clicktest.ts
server/src/semanticTokens/: click.ts  index.ts  testie.ts
server/tree-sitter-click/: Cargo.toml  binding.gyp  grammar.js  package.json  tree-sitter-click.d.ts
server/tree-sitter-click/bindings/node/: binding.cc  index.js
server/tree-sitter-click/bindings/rust/: lib.rs
server/tree-sitter-click/src/: grammar.json  node-types.json  parser.c
